<resources>
    <string name="app_name">DealerPILOT HR</string>
    <string name="text_loading">Loading</string>
    <string name="text_please_wait">Please wait...</string>
    <string name="error_login">Incorrect login</string>
    <string name="error_pass">Incorrect password</string>
    <string name="text_again_exit">To exit the application press «back» once again...</string>
    <string name="text_timeaut">Timeout when request at runtime</string>
    <string name="text_enter_your_email">Enter your email address and password.</string>
    <string name="text_email_label">Phone/E-mail</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_exit">Sign Out</string>
    <string name="text_messages">Notification</string>
    <string name="text_need_internet">No internet connection</string>
    <string name="text_not_user">The user is not found</string>
    <string name="text_organization">Organization *</string>
    <string name="text_organization_error">Organization is required</string>
    <string name="text_name">Account name *</string>
    <string name="text_name_error">Account name is required</string>
    <string name="text_password">Password *</string>
    <string name="text_password_error">Password is required</string>
    <string name="text_password_error_lenght">Your password be between 6 and 20 characters long</string>
    <string name="text_signin">SIGN IN</string>
    <string name="text_problems_signin">PROBLEMS WITH SIGN IN?</string>
    <string name="text_policies">My Policies &#38; Handbooks</string>
    <string name="text_acknowledge">Acknowledge</string>
    <string name="unknown_error">Unknown error</string>
    <string name="text_courses">My Training Courses</string>
    <string name="text_duration">Duration</string>
    <string name="text_quiz_score">Quiz Score</string>
    <string name="text_course">Course</string>
    <string name="text_quiz">Quiz</string>
    <string name="text_next">Next</string>
    <string name="text_finish">Finish</string>
    <string name="text_previous">Previous</string>
    <string name="text_back_courses">Back to courses</string>
    <string name="text_your_quiz_score">Your quiz score is</string>
    <string name="text_start">Start</string>
    <string name="text_quiz_will_take">Quiz will take approximately to</string>
    <string name="text_to_complete">to complete!</string>
    <string name="hours">hour</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="text_templates">Inspection Templates</string>
    <string name="text_language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="name">Name</string>
    <string name="name_error">Name is required</string>
    <string name="text_description">Description</string>
    <string name="text_template">Inspection Template</string>
    <string name="text_items">Items</string>
    <string name="text_template_item">Template Item</string>
    <string name="text_save_change">Save changes?</string>
    <string name="text_no_save">Not save</string>
    <string name="text_yes_save">Save</string>
    <string name="text_photo">Take photo</string>
    <string name="text_mobile">Select from gallery</string>
    <string name="text_delete_photo">Delete photo</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_error_camera">You didn\'t grant access of App to the camera or your device does not support camera</string>
    <string name="text_calendar">My Calendar</string>
    <string name="text_my_hr_details">My HR Details</string>
    <string name="text_personal">Personal Information</string>
    <string name="text_contact">Contact Information</string>
    <string name="text_additional">Additional Information</string>
    <string name="text_work">Work Information</string>
    <string name="text_employee">Employee Information</string>
    <string name="text_payroll">Payroll Information</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_sinnumber">SIN Number</string>
    <string name="text_driver_license">Driver\'s License Number</string>
    <string name="text_expire_date">Driver\'s License Expiry Date</string>
    <string name="text_hire_date">Hire Date</string>
    <string name="text_probation">Probation End Date</string>
    <string name="text_termination">Termination Date</string>
    <string name="text_hire_type">Type</string>
    <string name="text_work_permit">Work Permit Number</string>
    <string name="text_tech_license">Tech License Number</string>
    <string name="text_vsr_number">VSR Number</string>
    <string name="text_driver_license_expire">Driver license number expire</string>
    <string name="text_tech_license_expire">Tech License Expiry Date</string>
    <string name="text_vsr_expire">VSR Expiry Date</string>
    <string name="text_primary_residence">Primary Residence</string>
    <string name="text_secondary_residence">Secondary Residence</string>
    <string name="text_address">Address</string>
    <string name="text_country">Country</string>
    <string name="text_province">Province</string>
    <string name="text_city">City</string>
    <string name="text_postal_code">Postal Code</string>
    <string name="text_phone">Phone</string>
    <string name="text_home_phone">Home Phone Number</string>
    <string name="text_cell_phone">Cell Phone Number</string>
    <string name="text_email">Email</string>
    <string name="text_business_email">Business Email</string>
    <string name="text_personal_email">Personal Email</string>
    <string name="text_confirm_delete">Are you sure you want to delete?</string>
    <string name="text_delete">Delete</string>
    <string name="text_workplace_inspections">Workplace Inspections</string>
    <string name="text_organization_structure">Organization Structure</string>
    <string name="text_is_current">Is Current</string>
    <string name="text_is_position">Is Position</string>
    <string name="text_workplace_inspection">Workplace Inspection</string>
    <string name="text_date">Date</string>
    <string name="date_error">Date is required</string>
    <string name="template">Template</string>
    <string name="text_show_inspection">Show Inspection on Employee Board</string>
    <string name="text_workplace_inspection_item">Workplace Inspection Item</string>
    <string name="text_status">Status</string>
    <string name="text_priority">Priority</string>
    <string name="text_severity">Severity</string>
    <string name="text_files">Files</string>
    <string name="text_access_denied">Access denied</string>
    <string name="text_open_file">File download complete. Open this file?</string>
    <string name="text_no">No</string>
    <string name="text_open">Open</string>
    <string name="text_error_open">You have no apps to open this file</string>
    <string name="text_file">Select file from storage</string>
    <string name="text_no_file">File is not exist</string>
    <string name="text_outstanding_courses">Outstanding Training Courses</string>
    <string name="text_outstanding_policies">Outstanding Policies</string>
    <string name="text_courses_no">No pending courses to display</string>
    <string name="text_policies_no">No pending policies</string>
    <string name="text_workplace_no">There are currently no posted inspections</string>
    <string name="text_manager">Primary Manager</string>
    <string name="text_secondary_manager">Secondary Manager</string>
    <string name="text_number">Employee Number</string>
    <string name="text_punch_number">Punch Number</string>
    <string name="text_pay_frequency">Pay Frequency</string>
    <string name="text_hours_per_day">Worked Hours Per Day</string>
    <string name="text_salary">Salary</string>
    <string name="text_hourly_rate">Hourly Rate</string>
    <string name="text_custom">Custom Fields</string>
    <string name="text_custom_field">Custom Field</string>
    <string name="text_custom_field1">Custom Field 1</string>
    <string name="text_custom_field2">Custom Field 2</string>
    <string name="text_custom_field3">Custom Field 3</string>
    <string name="text_custom_field4">Custom Field 4</string>
    <string name="text_custom_field5">Custom Field 5</string>
    <string name="text_custom_field6">Custom Field 6</string>
    <string name="text_custom_field7">Custom Field 7</string>
    <string name="text_custom_field8">Custom Field 8</string>
    <string name="text_custom_field9">Custom Field 9</string>
    <string name="text_member">Health And Safety Member</string>
    <string name="text_certified">CPR Certified</string>
    <string name="text_aidcertified">First Aid Certified</string>
    <string name="text_healthcertified">Health &#38; Safety Certified</string>
    <string name="text_investigations">Investigations</string>
    <string name="text_investigation_no">No uncompleted investigations</string>
    <string name="text_investigation">Investigation</string>
    <string name="text_investigation_item">Investigation Item</string>
    <string name="text_my_contacts">My Contacts</string>
    <string name="text_emergency_contacts">Emergency Contacts</string>
    <string name="text_family_members">Family Members / Dependents</string>
    <string name="text_health_safety">Health &#38; Safety</string>
    <string name="text_relationship">Relationship</string>
    <string name="text_primary_phone">Primary Phone</string>
    <string name="text_additional_phone">Additional Phone</string>
    <string name="text_notes">Notes</string>
    <string name="text_template_no">No templates</string>
    <string name="text_files_no">No files</string>
    <string name="text_item_no">No items</string>
    <string name="text_type">Type templates</string>
    <string name="text_workplace_templates">Workplace Inspection Templates</string>
    <string name="text_meetings_templates">Meetings Topic Templates</string>
    <string name="text_members">Members</string>
    <string name="text_members_no">No members to display</string>
    <string name="text_meetings">Meetings</string>
    <string name="text_meetings_no">No upcoming meetings</string>
    <string name="text_completed">Completed</string>
    <string name="text_posted">Posted</string>
    <string name="text_meeting">Meeting Minutes</string>
    <string name="text_location">Location</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="text_post_on_board">Post on board</string>
    <string name="text_topics">Topics</string>
    <string name="text_topics_no">No topics to display</string>
    <string name="text_time">Time</string>
    <string name="text_next_meeting">Next Meeting</string>
    <string name="text_next_workplace_inspection">Next Workplace Inspection</string>
    <string name="text_topic">Topic</string>
    <string name="topics_error">Topics is required</string>
    <string name="text_unauthorized">Session has expired, please login again.</string>
    <string name="text_my_investigations">My Investigations</string>
    <string name="text_performances">My Performance Evaluation</string>
    <string name="text_performance_no">No performances to display</string>
    <string name="text_performance">Performance Evaluation</string>
    <string name="text_date_posted">Date Posted</string>
    <string name="text_renewal_date">Renewal Date</string>
    <string name="text_error_add_files">You cannot add more than one file</string>
    <string name="text_disciplines">My Disciplines</string>
    <string name="text_synchronize">SYNCHRONIZE</string>
    <string name="text_exits_nosynchronize">Exist no synchronized data</string>
    <string name="text_assign">Assign Tasks And Complete</string>
    <string name="text_only_failed">Show only failed items</string>
    <string name="text_assign_b">ASSIGN TASK AND COMPLETE</string>
</resources>