<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:id="@+id/top_group">

        <RelativeLayout
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:id="@+id/back"
            android:background="@drawable/top_button">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/back_icon"
                android:src="@drawable/back_icon"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_assign"
            android:id="@+id/text_header"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/top_group"
        android:layout_above="@+id/nointernet_group">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_group">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_group">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/itemlist"
                    android:scrollbars="vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_item_no"
                    android:id="@+id/text_no"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_only_failed"
                android:id="@+id/onlyfailed"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/assign"
                android:background="@drawable/button_selector_dark"
                android:textColor="@color/white"
                android:text="@string/text_assign_b"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/nointernet_group"
        android:background="@drawable/black_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_exits_nosynchronize"
            android:id="@+id/text_nointernet"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="24dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/text_setinternet"
            android:layout_toStartOf="@+id/text_setinternet"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_synchronize"
            android:id="@+id/text_setinternet"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="24dp"
            android:singleLine="true"
            android:textColor="@color/green_light"
            android:textSize="14sp"/>
    </RelativeLayout>

</RelativeLayout>
