<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    android:id="@+id/root_layout"
    android:padding="20dp"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:id="@+id/logo_group"
        android:layout_above="@+id/center_group">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:adjustViewBounds="false"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/center_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/text_error"
            android:textColor="@color/red"
            android:layout_marginLeft="2dp"
            android:visibility="gone"
            android:maxLength="200" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/organization_group"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_organization"
                android:id="@+id/text_organization"
                android:visibility="invisible"
                android:textColor="@color/grey_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_organization"
                android:id="@+id/text_organization_hint"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/text_organization"
                android:textColor="@color/grey_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/organization"
                android:layout_below="@+id/text_organization" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_organization_error"
            android:id="@+id/text_organization_error"
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_group"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_name"
                android:id="@+id/text_name"
                android:visibility="invisible"
                android:textColor="@color/grey_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_name"
                android:id="@+id/text_name_hint"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/text_name"
                android:textColor="@color/grey_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"
                android:layout_below="@+id/text_name" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_name_error"
            android:id="@+id/text_name_error"
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_group"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_password"
                android:id="@+id/text_password"
                android:visibility="invisible"
                android:textColor="@color/grey_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_password"
                android:id="@+id/text_pass_hint"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/text_password"
                android:textColor="@color/grey_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_below="@+id/text_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_password_error"
            android:id="@+id/text_password_error"
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text_signin"
        android:id="@+id/button_signin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_selector_grey"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text_problems_signin"
        android:id="@+id/button_problems"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/button_selector_transparent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" />

</RelativeLayout>
