<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_datetime"
        android:id="@+id/photo_group"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="65dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/image_photo"
                android:src="@drawable/camera"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_photo"
            android:id="@+id/text_photo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_datetime"
        android:id="@+id/mobile_group"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="65dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/image_mobile"
                android:src="@drawable/mobile"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_mobile"
            android:id="@+id/text_mobile"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_datetime"
        android:id="@+id/file_group"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="65dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/image_file"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/file" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_file"
            android:id="@+id/text_file"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_datetime"
        android:id="@+id/cancel_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_cancel"
            android:id="@+id/text_cancel"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>